css login component

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,11 +1,9 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Sarpanch, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background-color: white;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -40,23 +38,34 @@ body {
 
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
+  line-height: 1.2;
+}
+
+label{
+  font-size:1rem
+}
+
+input{
+  height: 45px;
+  border: 1px solid black;
+  border-radius: 2px;
+  margin: 10px 0;
+  padding: 0 0 0 2px;
+  font-size: 1rem;
 }
 
 button {
   border-radius: 8px;
+  color: white;
   border: 1px solid transparent;
+  margin: 0.5em;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #052d50;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-
-button:hover {
-  border-color: #646cff;
 }
 
 button:focus,
@@ -64,17 +73,17 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+// @media (prefers-color-scheme: light) {
+//   :root {
+//     color: #213547;
+//     background-color: #ffffff;
+//   }
 
-  a:hover {
-    color: #747bff;
-  }
+//   a:hover {
+//     color: #747bff;
+//   }
 
-  button {
-    background-color: #f9f9f9;
-  }
-}
+//   button {
+//     background-color: #f9f9f9;
+//   }
+// }
