--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -1,12 +1,36 @@
 .login{
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
 }
 
 .login_form{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 100%;
+}
+
+.login-form_h1, .login_footer-text {
+    text-align: center;
+}
+
+.login_h2{
+    margin:0 0 10px 0;
+}
+
+.login_form-input{
+    width: 95%;
+    margin: auto;
+}
+
+.login_footer{
+    margin-bottom: 5px;
+}
+
+.owner{
+    color: #052d50;
+}
+
+.login_footer-text{
+    font-size: 14px;
 }
