--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
 .stroke{
-    margin : 20px;
-    border : 1px solid black
+    border : 1px solid black;
+    border-radius: 5px;
+    height: 100%;
 }
