--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -30,3 +30,10 @@
 .login_footer-text{
     font-size: 14px;
 }
+
+
+@media screen and (min-width: 699px) {
+    .login_form-input{
+        width: 20%;
+    }
+  }
