--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -79,10 +79,27 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+
+.delete-button{
+  border-radius: none;
+  color: transparent;
+  border: none;
+  margin: 0.5em;
+  padding: 0;
+  font-size: 0em;
+  font-weight: none;
+  font-family: inherit;
+  background-color: transparent;
+  transition: none;
+}
+.delete-button:focus,
+.delete-button:focus-visible {
+  outline: none;
 }
 
 .login_footer-text {
