--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -44,6 +44,54 @@ input[type=checkbox] {
   text-align: center;
 }
 
+.update_isActif{
+  display: block;
+  width: 300px;
+  background-color: #E8E9EA;
+  border-radius: 5px;
+  padding: 10px;
+  position: fixed;
+  left: 40%;
+  top: 40%;
+}
+.update{
+ display: none;
+
+  &_text{
+    width: 100%;
+    background-color: white;
+    height: 90px;
+    margin: auto;
+    border: 1px solid;
+  }
+  &_btns{
+    &_cancel{
+      border-radius: inherit;
+      color: black;
+      border: none;
+      margin: 0.5em;
+      padding: 0;
+      font-size: 1em;
+      font-weight: normal;
+      font-family: inherit;
+      background-color: transparent;
+      transition: none;
+    }
+    &_valid{
+      border-radius: inherit;
+    color: black;
+    border: none;
+    margin: 0.5em;
+    padding: 0;
+    font-size: 1em;
+    font-weight: normal;
+    font-family: inherit;
+    background-color: transparent;
+    transition: none;
+    }
+  }
+}
+
 @media screen and (min-width: 699px) {
   .home_form {
     width: 30%;
