--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -84,6 +84,36 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.cancel-button {
+  color: #880909;
+  border-radius: inherit;
+  border: none;
+  margin: 0.5em;
+  padding: 0;
+  font-size: 1.5rem;
+  font-weight: normal;
+  font-family: inherit;
+  background-color: transparent;
+  transition: none;
+}
+
+.valid-button{
+  color: #098810;
+  border-radius: inherit;
+  border: none;
+  margin: 0.5em;
+  padding: 0;
+  font-size: 1.5rem;
+  font-weight: normal;
+  font-family: inherit;
+  background-color: transparent;
+  transition: none;
+}
+
+.icon {
+  width: 40px;
+}
+
 .delete-button,
 .edit-button {
   border-radius: none;
