--- a/src/components/profil/profil.scss
+++ b/src/components/profil/profil.scss
@@ -1,6 +1,7 @@
 .form_isActif{
     display: block;
     width: 100%;
+    height: 90vh;
 }
 .none{
     display: none;
@@ -64,6 +65,29 @@
     flex-direction: column;
 }
 
+.about{
+  text-align: center;
+}
+
+.form_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  height: 100%;
+
+  &-btns{
+    width: 100%;
+    text-align: end;
+  }
+  &-infos{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-self: center;
+  }
+}
+
 @media screen and (min-width: 699px) {
   .profil {
     &_container {
@@ -72,5 +96,12 @@
     &_button {
       width: 100%;
     }
+    
   }
+
+  .form_container{  
+    &-infos{
+      width: 30%;
+    }
+}
 }
