add new user ok, with message of confirmation and redirection

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -145,6 +145,10 @@ button:focus-visible {
   text-align: center;
 }
 
+.none{
+  display: none;
+}
+
 .displayErrorMessage{
   display: block;
   color: #880909;
