fied error on login page

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -152,7 +152,7 @@ button:focus-visible {
 .displayErrorMessage {
   display: block;
   color: #880909;
-  font-weight: bold;
+  // font-weight: bold;
   text-align: center;
 }
 
