--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -140,9 +140,10 @@ button:focus-visible {
 
 .displayValidatedMessage {
   display: block;
+  font-size: 1.2em;
   color: #098810;
-  font-weight: bold;
-  text-align: center;
+  text-align: start;
+  margin: 2px 0;
 }
 
 .none {
@@ -151,9 +152,10 @@ button:focus-visible {
 
 .displayErrorMessage {
   display: block;
+  font-size: 1.2em;
   color: #880909;
-  // font-weight: bold;
-  text-align: center;
+  text-align: start;
+  margin: 2px 0;
 }
 
 .social-media {
