--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -14,9 +14,9 @@
 
 #root {
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 a {
@@ -38,7 +38,7 @@ body {
 }
 
 section {
-  height: 100%;
+  min-height: 100vh;
 }
 
 h1 {
@@ -111,7 +111,7 @@ button:focus-visible {
 }
 
 .icon {
-  width: 40px;
+  width: 30px;
 }
 
 .delete-button,
