--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -6,8 +6,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    flex-wrap: wrap;
     height: 100%;
+}
+.login-form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: nowrap;
 }
 
 .login_h2{
