--- a/src/components/profil/profil.scss
+++ b/src/components/profil/profil.scss
@@ -26,7 +26,7 @@
       flex-direction: column;
       flex-wrap: wrap;
       align-content: center;
-      width: 30%;
+      width: 100%;
       height: 50%;
       align-self: center;
       justify-content: space-between;
@@ -34,6 +34,8 @@
   }
   &_link{
     width: 100%;
+    margin: auto;
+    text-align: center;
   }
   &_button {
     color: #052d50;
@@ -89,6 +91,10 @@
   .profil {
     &_container {
       width: 100%;
+
+      &-infos {
+        width: 30%;
+      }
     }
     &_button {
       width: 100%;
