--- a/src/components/register/register.scss
+++ b/src/components/register/register.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 90vh;
+    min-height: 90vh;
 
     &_h2_form{
         width: 95%;
