display online works. Update some css

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -16,7 +16,7 @@
   margin: 0 auto;
   padding: 10px;
   width: 100vw;
-  min-height: 100vh;
+  max-height: 100vh;
 }
 
 a {
@@ -34,11 +34,11 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 section {
-  min-height: 100vh;
+  height: 100vh;
 }
 
 h1 {
