--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,6 @@
 .stroke{
     border : 1px solid black;
     border-radius: 5px;
-    min-height: 100vh;
+    max-height: 100vh;
     padding: 10px;
 }
