--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -1,12 +1,12 @@
 .login{
-    height: 90vh;
+    height: 95vh;
 }
 
 .login_form{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
+    max-height: 100%;
 }
 .login-form{
     display: flex;
