--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -16,7 +16,7 @@
   margin: 0 auto;
   padding: 10px;
   width: 100vw;
-  max-height: 100vh;
+  height: 100%;
 }
 
 a {
@@ -38,7 +38,7 @@ body {
 }
 
 section {
-  height: 100vh;
+  height: 100%;
 }
 
 h1 {
